Firebase Phone login

--- a/app/src/main/res/layout/content_comment_reply_notification_activity.xml
+++ b/app/src/main/res/layout/content_comment_reply_notification_activity.xml
@@ -48,7 +48,6 @@
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:background="@color/white"
-    android:visibility="gone"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="parent"
@@ -65,159 +64,86 @@
     </LinearLayout>
   </com.facebook.shimmer.ShimmerFrameLayout>
 
-  <!--  <RelativeLayout
-      android:id="@+id/rLayout"
-      android:layout_width="match_parent"
-      android:layout_height="70dp"
-      android:layout_alignParentBottom="true"
-      android:background="#f0f0f0"
-      android:elevation="5dp"
-      app:layout_constraintBottom_toBottomOf="parent">
-
-      <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/userImageView"
-        android:layout_width="34dp"
-        android:layout_height="34dp"
-        android:visibility="gone"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/space_10"
-        android:src="@drawable/default_commentor_img" />
-
-      <RelativeLayout
-        android:id="@+id/addCommentFAB"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_toEndOf="@id/userImageView"
-        android:background="@drawable/rectangular_border"
-        android:gravity="center_vertical"
-        android:visibility="visible">
-
-
-        <com.mycity4kids.widget.CustomFontTextView
-          android:id="@+id/typeHere"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_centerVertical="true"
-          android:layout_marginLeft="@dimen/space_10"
-          android:gravity="center_vertical"
-          android:padding="12dp"
-          android:text="Write a comment"
-          android:textColor="#a1a4a8"
-          android:textSize="18sp"
-          android:visibility="visible"
-          app:fontName="oswald.ttf" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-          android:id="@+id/beTheFirstOne"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_centerVertical="true"
-          android:layout_marginLeft="@dimen/space_10"
-          android:text="Be the first one"
-          android:textColor="@color/groups.grey"
-          android:textSize="12sp"
-          android:visibility="gone" />
-
-        &lt;!&ndash; <ImageView
-             android:id="@+id/audio"
-             android:layout_width="30dp"
-             android:layout_height="30dp"
-             android:layout_alignParentRight="true"
-             android:layout_centerVertical="true"
-             android:layout_marginRight="10dp"
-             android:padding="4dp"
-             app:srcCompat="@drawable/ic_audio_record" />&ndash;&gt;
-
-
-        &lt;!&ndash; <ImageView
-             android:layout_width="30dp"
-             android:layout_height="30dp"
-             android:layout_alignParentRight="true"
-             android:layout_centerVertical="true"
-             android:layout_marginRight="40dp"
-             android:paddingTop="5dp"
-             android:paddingBottom="5dp"
-             android:src="@drawable/ic_add_image" />&ndash;&gt;
-
-        <com.mycity4kids.widget.MomspressoButtonWidget
-          android:id="@+id/disableStatePostTextView"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_alignParentEnd="true"
-          android:layout_centerVertical="true"
-          android:layout_marginEnd="@dimen/space_10"
-          android:paddingStart="@dimen/space_20"
-          android:paddingTop="@dimen/space_10"
-          android:paddingEnd="@dimen/space_20"
-          android:paddingBottom="@dimen/space_10"
-          android:text="Post"
-          android:textStyle="bold"
-          app:fb_borderColor="#D8D8D8"
-          app:fb_borderWidth="1dp"
-          app:fb_defaultColor="@color/white_color"
-          app:fb_radius="@dimen/space_30"
-          app:fb_textColor="#D8D8D8"
-          app:fb_textSize="14sp" />
-        <com.mycity4kids.widget.MomspressoButtonWidget
-          android:id="@+id/enableStatePostTextView"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_alignParentEnd="true"
-          android:layout_centerVertical="true"
-          android:layout_marginEnd="@dimen/space_10"
-          android:paddingStart="@dimen/space_20"
-          android:paddingTop="@dimen/space_10"
-          android:paddingEnd="@dimen/space_20"
-          android:paddingBottom="@dimen/space_10"
-          android:text="Post"
-          android:textStyle="bold"
-          android:visibility="gone"
-          app:fb_borderColor="@color/app_red"
-          app:fb_borderWidth="1dp"
-          app:fb_defaultColor="@color/app_red"
-          app:fb_radius="@dimen/space_30"
-          app:fb_textColor="@color/white"
-          app:fb_textSize="14sp" />
-
-      </RelativeLayout>
-
-
-      <View
-
-        android:layout_width="match_parent"
-        android:layout_height=".5dp"
-        android:layout_marginBottom="81dp"
-        android:background="#99cecece" />
-    </RelativeLayout>-->
   <RelativeLayout
     android:id="@+id/rLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:elevation="@dimen/space_5"
+    android:layout_height="70dp"
+    android:layout_alignParentBottom="true"
+    android:background="#f0f0f0"
+    android:elevation="5dp"
     app:layout_constraintBottom_toBottomOf="parent">
 
+    <com.mikhaellopez.circularimageview.CircularImageView
+      android:id="@+id/userImageView"
+      android:layout_width="34dp"
+      android:layout_height="34dp"
+      android:layout_centerVertical="true"
+      android:layout_marginStart="@dimen/space_10"
+      android:src="@drawable/default_commentor_img"
+      android:visibility="gone" />
 
     <RelativeLayout
+      android:id="@+id/addCommentFAB"
       android:layout_width="match_parent"
-      android:layout_height="50dp"
-      android:layout_alignBottom="@id/line"
-      android:background="#f0f0f0">
+      android:layout_height="wrap_content"
+      android:layout_centerVertical="true"
+      android:layout_marginLeft="10dp"
+      android:layout_marginRight="10dp"
+      android:layout_toEndOf="@id/userImageView"
+      android:background="@drawable/rectangular_border"
+      android:gravity="center_vertical"
+      android:visibility="visible">
 
-      <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/userImageView"
-        android:layout_width="34dp"
-        android:layout_height="34dp"
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/typeHere"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/space_10"
-        android:src="@drawable/default_commentor_img" />
+        android:layout_marginLeft="@dimen/space_10"
+        android:gravity="center_vertical"
+        android:padding="12dp"
+        android:text="Write a comment"
+        android:textColor="#a1a4a8"
+        android:textSize="18sp"
+        android:visibility="visible"
+        app:fontName="oswald.ttf" />
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/beTheFirstOne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/space_10"
+        android:text="Be the first one"
+        android:textColor="@color/groups.grey"
+        android:textSize="12sp"
+        android:visibility="gone" />
+
+      <!-- <ImageView
+           android:id="@+id/audio"
+           android:layout_width="30dp"
+           android:layout_height="30dp"
+           android:layout_alignParentRight="true"
+           android:layout_centerVertical="true"
+           android:layout_marginRight="10dp"
+           android:padding="4dp"
+           app:srcCompat="@drawable/ic_audio_record" />-->
+
+
+      <!-- <ImageView
+           android:layout_width="30dp"
+           android:layout_height="30dp"
+           android:layout_alignParentRight="true"
+           android:layout_centerVertical="true"
+           android:layout_marginRight="40dp"
+           android:paddingTop="5dp"
+           android:paddingBottom="5dp"
+           android:src="@drawable/ic_add_image" />-->
 
       <com.mycity4kids.widget.MomspressoButtonWidget
         android:id="@+id/disableStatePostTextView"
-        android:layout_width="80dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
@@ -228,68 +154,52 @@
         android:paddingBottom="@dimen/space_10"
         android:text="Post"
         android:textStyle="bold"
-        android:visibility="visible"
         app:fb_borderColor="#D8D8D8"
         app:fb_borderWidth="1dp"
         app:fb_defaultColor="@color/white_color"
         app:fb_radius="@dimen/space_30"
         app:fb_textColor="#D8D8D8"
         app:fb_textSize="14sp" />
-
-
-    </RelativeLayout>
-
-    <RelativeLayout
-      android:id="@+id/r"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="50dp"
-      android:layout_marginEnd="@dimen/space_100"
-      android:background="@color/white">
-
-      <com.mycity4kids.tagging.ui.RichEditorView
-        android:id="@+id/typeHere"
-        android:layout_width="match_parent"
+      <com.mycity4kids.widget.MomspressoButtonWidget
+        android:id="@+id/enableStatePostTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/space_10"
-        android:background="@color/transparent"
-        android:gravity="center_vertical"
-        android:hint="Write a comment"
-        android:maxLines="4"
-        android:textColor="#a1a4a8"
-        android:textSize="18sp"
-        android:visibility="visible"
-        app:fontName="oswald.ttf" />
+        android:layout_marginEnd="@dimen/space_10"
+        android:paddingStart="@dimen/space_20"
+        android:paddingTop="@dimen/space_10"
+        android:paddingEnd="@dimen/space_20"
+        android:paddingBottom="@dimen/space_10"
+        android:text="Post"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:fb_borderColor="@color/app_red"
+        app:fb_borderWidth="1dp"
+        app:fb_defaultColor="@color/app_red"
+        app:fb_radius="@dimen/space_30"
+        app:fb_textColor="@color/white"
+        app:fb_textSize="14sp" />
 
     </RelativeLayout>
+
 
     <View
-      android:id="@+id/line"
-      android:layout_width="match_parent"
-      android:layout_height="1dp"
-      android:layout_below="@id/r"
-      android:background="#f0f0f0" />
-    <!-- <View
 
-       android:layout_width="match_parent"
-       android:layout_height=".5dp"
-       android:background="#99cecece" />-->
+      android:layout_width="match_parent"
+      android:layout_height=".5dp"
+      android:layout_marginBottom="81dp"
+      android:background="#99cecece" />
   </RelativeLayout>
 
   <FrameLayout
     android:id="@+id/content_frame"
     android:layout_width="match_parent"
     android:layout_height="0dp"
-    android:elevation="@dimen/space_5"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@id/toolbar" />
-
-
-
-
 
   <RelativeLayout
     android:id="@+id/taggingCoachmark"
@@ -420,7 +330,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-      android:id="@+id/r1"
+      android:id="@+id/r"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/l"
@@ -439,7 +349,7 @@
         android:paddingBottom="@dimen/space_8">
 
         <com.mikhaellopez.circularimageview.CircularImageView
-          android:id="@+id/userImageView1"
+          android:id="@+id/userImageView"
           android:layout_width="34dp"
           android:layout_height="34dp"
           android:layout_centerVertical="true"
@@ -452,13 +362,13 @@
           android:layout_centerVertical="true"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
-          android:layout_toEndOf="@id/userImageView1"
+          android:layout_toEndOf="@id/userImageView"
           android:background="@drawable/rectangular_border"
           android:gravity="center_vertical"
           android:visibility="visible">
 
           <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/typeHere1"
+            android:id="@+id/typeHere"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -483,7 +393,7 @@
             android:visibility="gone" />
 
           <com.mycity4kids.widget.MomspressoButtonWidget
-            android:id="@+id/disableStatePostTextView1"
+            android:id="@+id/disableStatePostTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -530,7 +440,7 @@
       android:id="@+id/followFriendsTextView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_below="@+id/r1"
+      android:layout_below="@+id/r"
       android:layout_marginTop="@dimen/space_10"
       android:gravity="center"
       android:padding="20dp"
