--- a/app/src/main/res/layout/ss_comment_item.xml
+++ b/app/src/main/res/layout/ss_comment_item.xml
@@ -162,6 +162,21 @@
     android:background="@color/grey_light"
     android:visibility="visible" />
 
+
+  <com.mycity4kids.widget.CustomFontTextView
+    android:id="@+id/viewMoreTextView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/underlineView"
+    android:layout_marginTop="@dimen/space_10"
+    android:layout_marginBottom="30dp"
+    android:gravity="center"
+    android:visibility="gone"
+    android:text="View More"
+    android:textColor="@color/app_red"
+    android:textSize="14sp"
+    app:fontName="oswald_regular.ttf" />
+
   <com.mycity4kids.widget.CustomFontTextView
     android:id="@+id/topCommentTextView"
     android:layout_width="match_parent"
@@ -176,6 +191,5 @@
     android:textSize="14sp"
     android:visibility="gone"
     app:fontName="Roboto-Medium.ttf" />
-
 
 </RelativeLayout>
