--- a/app/src/main/res/layout/article_details_fragment.xml
+++ b/app/src/main/res/layout/article_details_fragment.xml
@@ -452,7 +452,7 @@
 
           <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/commentsHeaderTextView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
@@ -463,6 +463,24 @@
             android:visibility="gone"
             app:fontName="oswald_regular.ttf" />
 
+
+
+          <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/writeCommentTopTextView"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/write_comment_textbox_bg"
+            android:drawableLeft="@drawable/ic_write_a_comment"
+            android:drawablePadding="@dimen/space_10"
+            android:padding="@dimen/space_10"
+            android:text="@string/write_a_comment"
+            android:textColor="@color/grey_faded"
+            android:visibility="gone"
+            android:textSize="16sp" />
 
           <include
             android:id="@+id/commentContainer"
@@ -993,18 +1011,19 @@
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical">
 
-          <com.mycity4kids.widget.ShareButtonWidget
+          <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/writeCommentTextView"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
-            android:elevation="0dp"
-            android:textSize="14sp"
-            app:radius="4dp"
-            app:shareBgColor="#F7F7F7"
-            app:shareText="Write a Comment…"
-            app:shareTextColor="#C1C1C1" />
+            android:background="@drawable/write_comment_textbox_bg"
+            android:drawableLeft="@drawable/ic_write_a_comment"
+            android:drawablePadding="@dimen/space_10"
+            android:padding="@dimen/space_10"
+            android:text="@string/write_a_comment"
+            android:textColor="@color/grey_faded"
+            android:textSize="16sp" />
         </RelativeLayout>
 
       </LinearLayout>
