--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+  <color name="color_A7A7A7">#A7A7A7</color>
+  <color name="color_ECECEC">#ECECEC</color>
 </resources>
