--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -96,4 +96,5 @@
     <dimen name="space_22">22dp</dimen>
   <dimen name="space_58">58dp</dimen>
   <dimen name="space_31">31dp</dimen>
+  <dimen name="space_11">11dp</dimen>
 </resources>
