--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -99,7 +99,7 @@
       android:paddingTop="12dp"
       android:paddingRight="16dp"
       android:paddingBottom="12dp"
-      android:text="@string/all_momspresso_live"
+      android:text="@string/all_videos.tabbar.momspresso_label"
       android:textSize="14sp"
       app:fontName="oswald.ttf" />
 
