--- a/app/src/main/res/layout/live_streaming_activity.xml
+++ b/app/src/main/res/layout/live_streaming_activity.xml
@@ -121,7 +121,7 @@
         android:paddingTop="12dp"
         android:paddingEnd="8dp"
         android:paddingBottom="12dp"
-        android:text="12" />
+        android:text="" />
 
       <ImageView
         android:id="@+id/likeImageView"
