--- a/app/src/main/res/layout/article_comment_replies_dialog.xml
+++ b/app/src/main/res/layout/article_comment_replies_dialog.xml
@@ -28,6 +28,26 @@
     app:fab_colorPressed="@color/app_red"
     app:fab_icon="@drawable/ic_add_comments" />
 
+  <HorizontalScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_above="@+id/rLayout"
+    android:background="@color/white"
+    android:elevation="3dp"
+    android:paddingStart="14dp"
+    android:paddingTop="@dimen/space_7"
+    android:paddingEnd="14dp"
+    android:paddingBottom="7dp"
+    android:visibility="visible">
+    <LinearLayout
+      android:id="@+id/suggestionContainer"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal">
+
+    </LinearLayout>
+
+  </HorizontalScrollView>
   <View
     android:layout_width="match_parent"
     android:layout_height="0.5dp"
@@ -41,7 +61,7 @@
     android:layout_alignParentBottom="true"
     android:background="#f0f0f0"
     android:elevation="@dimen/space_5">
-    
+
     <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="50dp"
@@ -52,30 +72,11 @@
         android:id="@+id/userImageView"
         android:layout_width="34dp"
         android:layout_height="34dp"
-        android:layout_centerVertical="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="@dimen/space_10"
+        android:layout_marginBottom="@dimen/space_5"
         android:src="@drawable/default_commentor_img" />
 
-      <com.mycity4kids.widget.MomspressoButtonWidget
-        android:id="@+id/disableStatePostTextView"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/space_10"
-        android:paddingStart="@dimen/space_20"
-        android:paddingTop="@dimen/space_10"
-        android:paddingEnd="@dimen/space_20"
-        android:paddingBottom="@dimen/space_10"
-        android:text="@string/join_dialog_post"
-        android:textStyle="bold"
-        android:visibility="visible"
-        app:fb_borderColor="#D8D8D8"
-        app:fb_borderWidth="1dp"
-        app:fb_defaultColor="@color/app_red"
-        app:fb_radius="20dp"
-        app:fb_textColor="@color/white_color"
-        app:fb_textSize="14sp" />
 
     </RelativeLayout>
 
@@ -84,8 +85,10 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="50dp"
-      android:layout_marginEnd="@dimen/space_100"
-      android:background="@color/white">
+      android:layout_marginTop="@dimen/space_5"
+      android:layout_marginEnd="@dimen/space_8"
+      android:layout_marginBottom="@dimen/space_5"
+      android:background="@drawable/rootlayout_with_rounded_corner">
 
       <com.mycity4kids.tagging.ui.RichEditorView
         android:id="@+id/typeHere"
@@ -93,6 +96,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginStart="@dimen/space_10"
+        android:layout_toStartOf="@+id/disableStatePostTextView"
         android:background="@color/transparent"
         android:gravity="center_vertical"
         android:hint="Write a comment"
@@ -101,6 +105,16 @@
         android:textSize="18sp"
         android:visibility="visible"
         app:fontName="oswald.ttf" />
+      <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/disableStatePostTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:paddingStart="10dp"
+        android:paddingEnd="@dimen/space_10"
+        android:src="@drawable/ic_post_comment_disabled_state" />
+
 
     </RelativeLayout>
 
