Suggestion bug fixing

--- a/app/src/main/res/layout/article_comment_replies_dialog.xml
+++ b/app/src/main/res/layout/article_comment_replies_dialog.xml
@@ -29,6 +29,7 @@
     app:fab_icon="@drawable/ic_add_comments" />
 
   <HorizontalScrollView
+    android:id="@+id/horizontalCommentSuggestionsContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_above="@+id/rLayout"
