--- a/app/src/main/res/layout/article_details_fragment.xml
+++ b/app/src/main/res/layout/article_details_fragment.xml
@@ -191,6 +191,9 @@
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:layout_below="@+id/webViewSeparator"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="359dp"
+        android:layout_marginEnd="0dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:visibility="visible">
@@ -201,7 +204,6 @@
           android:layout_height="wrap_content"
           android:layout_marginTop="100dp" />
       </LinearLayout>
-
       <WebView
         android:id="@+id/articleWebView"
         android:layout_width="match_parent"
@@ -464,23 +466,22 @@
             app:fontName="oswald_regular.ttf" />
 
 
-
           <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/writeCommentTopTextView"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginEnd="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/write_comment_textbox_bg"
             android:drawableLeft="@drawable/ic_write_a_comment"
             android:drawablePadding="@dimen/space_10"
             android:padding="@dimen/space_10"
             android:text="@string/write_a_comment"
             android:textColor="@color/grey_faded"
-            android:visibility="gone"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:visibility="gone" />
 
           <include
             android:id="@+id/commentContainer"
@@ -1069,5 +1070,46 @@
       android:layout_toRightOf="@id/bookmarkImageViewNew"
       android:padding="@dimen/space_16"
       app:srcCompat="@drawable/ic_three_verticle_dot_rounded" />
+  </RelativeLayout>
+
+
+  <RelativeLayout
+    android:id="@+id/userFollowPlusIconContainer"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_above="@+id/bottom_Lout"
+    android:layout_alignParentEnd="true"
+    android:layout_marginEnd="@dimen/space_10"
+    android:layout_marginBottom="@dimen/space_10"
+    android:background="@drawable/pink_rounded_shape"
+    android:padding="@dimen/space_10"
+    android:visibility="gone">
+
+    <com.mikhaellopez.circularimageview.CircularImageView
+      android:id="@+id/userImageView"
+      android:layout_width="40dp"
+      android:layout_height="40dp"
+      android:layout_centerVertical="true"
+      app:srcCompat="@drawable/default_commentor_img" />
+
+    <View
+      android:id="@+id/sep"
+      android:layout_width="1dp"
+      android:layout_height="25dp"
+      android:layout_centerVertical="true"
+      android:layout_marginStart="@dimen/space_10"
+      android:layout_toEndOf="@id/userImageView"
+      android:background="#D4D4D4" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+      android:id="@+id/followPlusIcon"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerVertical="true"
+      android:layout_marginStart="@dimen/space_10"
+      android:layout_toEndOf="@id/sep"
+      android:src="@drawable/ic_article_detail_plus" />
+
+
   </RelativeLayout>
 </RelativeLayout>
