--- a/app/src/main/res/layout/content_comment_reply_notification_activity.xml
+++ b/app/src/main/res/layout/content_comment_reply_notification_activity.xml
@@ -66,6 +66,7 @@
   </com.facebook.shimmer.ShimmerFrameLayout>
 
   <HorizontalScrollView
+    android:id="@+id/horizontalCommentSuggestionsContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
