--- a/app/src/main/res/layout/custom_comment_cell.xml
+++ b/app/src/main/res/layout/custom_comment_cell.xml
@@ -1,144 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:background="@color/white_color">
+
+  //Change View hierarchy with caution. getParent method is in use in the class file
+
+  <RelativeLayout
+    android:id="@+id/relativeMainContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white_color">
+    android:paddingLeft="10dp"
+    android:paddingTop="8dp"
+    android:paddingRight="10dp"
+    android:paddingBottom="4dp">
 
-    //Change View hierarchy with caution. getParent method is in use in the class file
+    <ImageView
+      android:id="@+id/commentorImageView"
+      android:layout_width="@dimen/ad_comments_profile_pic_width"
+      android:layout_height="@dimen/ad_comments_profile_pic_width"
+      android:layout_alignParentStart="true"
+      android:layout_alignParentLeft="true"
+      android:layout_alignParentTop="true"
+      android:contentDescription="@string/author_img"
+      android:src="@drawable/default_commentor_img"
+      android:visibility="visible" />
 
-    <RelativeLayout
-        android:id="@+id/relativeMainContainer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="4dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="8dp">
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/txvCommentTitle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="3dp"
+      android:layout_marginLeft="3dp"
+      android:layout_toEndOf="@+id/commentorImageView"
+      android:layout_toRightOf="@+id/commentorImageView"
+      android:ellipsize="end"
+      android:maxLines="1"
+      android:paddingLeft="5dp"
+      android:paddingRight="5dp"
+      android:singleLine="false"
+      android:text=""
+      android:textColor="@color/ad.comment.username"
+      android:textSize="@dimen/ad_comments_username"
+      app:fontName="oswald_regular.ttf" />
 
-        <ImageView
-            android:id="@+id/commentorImageView"
-            android:layout_width="@dimen/ad_comments_profile_pic_width"
-            android:layout_height="@dimen/ad_comments_profile_pic_width"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:contentDescription="@string/author_img"
-            android:src="@drawable/default_commentor_img"
-            android:visibility="visible" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/txvCommentTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
-            android:layout_marginStart="3dp"
-            android:layout_toEndOf="@+id/commentorImageView"
-            android:layout_toRightOf="@+id/commentorImageView"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:singleLine="false"
-            android:text=""
-            android:textColor="@color/ad.comment.username"
-            android:textSize="@dimen/ad_comments_username"
-            app:fontName="oswald_regular.ttf" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/txvCommentDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/txvCommentTitle"
-            android:layout_alignStart="@+id/txvCommentTitle"
-            android:layout_below="@id/txvCommentTitle"
-            android:layout_marginTop="8dp"
-            android:ellipsize="end"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:singleLine="false"
-            android:text=""
-            android:textColor="@color/ad.comment.body"
-            android:textSize="@dimen/ad_comments_text"
-            app:fontName="open_sans.ttf" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/txvCommentTitle"
-            android:layout_alignStart="@+id/txvCommentTitle"
-            android:layout_below="@+id/txvCommentDescription"
-            android:orientation="horizontal">
-
-            <!--<com.mycity4kids.widget.CustomFontTextView-->
-                <!--android:id="@+id/txvCommentCellReply"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginEnd="2dp"-->
-                <!--android:layout_marginRight="2dp"-->
-                <!--android:layout_marginTop="5dp"-->
-                <!--android:padding="5dp"-->
-                <!--android:text="@string/ad.comments.reply_label"-->
-                <!--android:textColor="@color/ad.comment.reply_label"-->
-                <!--android:textSize="@dimen/ad_comments_reply_btn"-->
-                <!--android:visibility="visible"-->
-                <!--app:fontName="oswald_regular.ttf" />-->
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/txvCommentCellEdit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="2dp"
-                android:layout_marginRight="2dp"
-                android:layout_marginTop="5dp"
-                android:padding="5dp"
-                android:text="@string/ad.comments.edit_label"
-                android:textColor="@color/ad.comment.edit_label"
-                android:textSize="@dimen/ad_comments_edit_btn"
-                android:visibility="gone"
-                app:fontName="oswald_regular.ttf" />
-
-            <!--<View-->
-                <!--android:id="@+id/separatorView"-->
-                <!--android:layout_width="1dp"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:layout_marginBottom="6dp"-->
-                <!--android:layout_marginEnd="2dp"-->
-                <!--android:layout_marginRight="2dp"-->
-                <!--android:layout_marginTop="12dp"-->
-                <!--android:background="@color/common_underline" />-->
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/txvDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:padding="5dp"
-                android:text=""
-                android:textColor="@color/ad.comment.date"
-                android:textSize="@dimen/ad_comments_date"
-                app:fontName="oswald.ttf" />
-        </LinearLayout>
-    </RelativeLayout>
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/txvCommentDescription"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/txvCommentTitle"
+      android:layout_alignStart="@+id/txvCommentTitle"
+      android:layout_alignLeft="@+id/txvCommentTitle"
+      android:layout_marginTop="8dp"
+      android:ellipsize="end"
+      android:paddingLeft="5dp"
+      android:paddingRight="5dp"
+      android:singleLine="false"
+      android:text=""
+      android:textColor="@color/ad.comment.body"
+      android:textSize="@dimen/ad_comments_text"
+      app:fontName="open_sans.ttf" />
 
     <LinearLayout
-        android:id="@+id/replyRelativeLayout"
-        android:layout_width="match_parent"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/txvCommentDescription"
+      android:layout_alignStart="@+id/txvCommentTitle"
+      android:layout_alignLeft="@+id/txvCommentTitle"
+      android:orientation="horizontal">
+
+      <!--<com.mycity4kids.widget.CustomFontTextView-->
+      <!--android:id="@+id/txvCommentCellReply"-->
+      <!--android:layout_width="wrap_content"-->
+      <!--android:layout_height="wrap_content"-->
+      <!--android:layout_marginEnd="2dp"-->
+      <!--android:layout_marginRight="2dp"-->
+      <!--android:layout_marginTop="5dp"-->
+      <!--android:padding="5dp"-->
+      <!--android:text="@string/ad.comments.reply_label"-->
+      <!--android:textColor="@color/ad.comment.reply_label"-->
+      <!--android:textSize="@dimen/ad_comments_reply_btn"-->
+      <!--android:visibility="visible"-->
+      <!--app:fontName="oswald_regular.ttf" />-->
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/txvCommentCellEdit"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/relativeMainContainer"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="vertical"
-        android:visibility="visible">
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
+        android:padding="5dp"
+        android:text="@string/ad.comments.edit_label"
+        android:textColor="@color/ad.comment.edit_label"
+        android:textSize="@dimen/ad_comments_edit_btn"
+        android:visibility="gone"
+        app:fontName="oswald_regular.ttf" />
 
+      <!--<View-->
+      <!--android:id="@+id/separatorView"-->
+      <!--android:layout_width="1dp"-->
+      <!--android:layout_height="match_parent"-->
+      <!--android:layout_marginBottom="6dp"-->
+      <!--android:layout_marginEnd="2dp"-->
+      <!--android:layout_marginRight="2dp"-->
+      <!--android:layout_marginTop="12dp"-->
+      <!--android:background="@color/common_underline" />-->
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/txvDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:padding="5dp"
+        android:text=""
+        android:textColor="@color/ad.comment.date"
+        android:textSize="@dimen/ad_comments_date"
+        app:fontName="oswald.ttf" />
     </LinearLayout>
+  </RelativeLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:layout_below="@+id/replyRelativeLayout"
-        android:layout_marginTop="10dp"
-        android:background="@color/grey_light"
-        android:visibility="visible" />
+  <LinearLayout
+    android:id="@+id/replyRelativeLayout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/relativeMainContainer"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:orientation="vertical"
+    android:visibility="visible">
+
+  </LinearLayout>
+
+  <View
+    android:id="@+id/underlineView"
+    android:layout_width="match_parent"
+    android:layout_height="0.1dp"
+    android:layout_below="@+id/replyRelativeLayout"
+    android:layout_marginTop="10dp"
+    android:background="@color/grey_light"
+    android:visibility="visible" />
+
+  <com.mycity4kids.widget.CustomFontTextView
+    android:id="@+id/viewMoreTextView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/underlineView"
+    android:layout_marginTop="@dimen/space_10"
+    android:layout_marginBottom="30dp"
+    android:gravity="center"
+    android:text="View More"
+    android:textColor="@color/app_red"
+    android:textSize="14sp"
+    android:visibility="gone"
+    app:fontName="oswald_regular.ttf" />
 
 </RelativeLayout>
