live stream translations

--- a/app/src/main/res/layout/live_stream_list_item.xml
+++ b/app/src/main/res/layout/live_stream_list_item.xml
@@ -68,7 +68,7 @@
           android:paddingTop="4dp"
           android:paddingEnd="8dp"
           android:paddingBottom="4dp"
-          android:text="LIVE"
+          android:text="@string/all_live"
           android:textColor="@color/white_color" />
       </androidx.cardview.widget.CardView>
 
