--- a/app/src/main/res/layout/mtv_live_upcoming_tab_fragment.xml
+++ b/app/src/main/res/layout/mtv_live_upcoming_tab_fragment.xml
@@ -23,7 +23,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:gravity="center"
-    android:text="No upcoming lives"
+    android:text="@string/no_upcoming_lives"
     android:textColor="@color/empty_list_msg"
     android:textSize="16sp"
     android:visibility="gone"
