--- a/app/src/main/res/drawable/facebook_rounded_corners.xml
+++ b/app/src/main/res/drawable/facebook_rounded_corners.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="#507cbe" />
+        android:color="@color/all_facebook_share" />
 
-    <solid android:color="#507cbe" />
+    <solid android:color="@color/all_facebook_share" />
 
     <padding
         android:left="1dp"
