--- a/app/src/main/res/drawable/phone_login_rounded_corners.xml
+++ b/app/src/main/res/drawable/phone_login_rounded_corners.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="#35dec2" />
+        android:color="#4AC570" />
 
-    <solid android:color="#35dec2" />
+    <solid android:color="#4AC570" />
 
     <padding
         android:left="1dp"
