--- a/app/src/main/res/layout/language_selection_item.xml
+++ b/app/src/main/res/layout/language_selection_item.xml
@@ -1,35 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@color/white_color">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="wrap_content"
+  android:layout_height="wrap_content">
 
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/languageTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginStart="40dp"
-        android:background="@drawable/language_selector"
-        android:gravity="center"
-        android:padding="10dp"
-        android:textColor="@color/language_text_selector"
-        android:textSize="16sp"
-        app:fontName="oswald_regular.ttf" />
+  <RelativeLayout
+    android:id="@+id/languageContainer"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="6dp">
 
     <ImageView
-        android:id="@+id/tickImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/languageTextView"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="20dp"
-        android:src="@drawable/tick"
-        android:visibility="gone" />
+      android:id="@+id/langImageView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:adjustViewBounds="true" />
 
-</RelativeLayout>
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/regionalLanguageTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="10dp"
+      android:layout_marginTop="10dp"
+      android:gravity="start"
+      android:textColor="@color/language_text_selector"
+      android:textSize="16sp"
+      android:textStyle="bold" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/languageTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/regionalLanguageTextView"
+      android:layout_marginStart="10dp"
+      android:gravity="start"
+      android:textColor="@color/language_text_selector"
+      android:textSize="12sp" />
+
+  </RelativeLayout>
+
+  <ImageView
+    android:id="@+id/tickImageView"
+    android:layout_width="22dp"
+    android:layout_height="22dp"
+    android:layout_gravity="end|bottom"
+    android:background="@drawable/circular_image_bg"
+    android:padding="5dp"
+    android:src="@drawable/tick"
+    android:visibility="visible" />
+
+</FrameLayout>
