--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -10,6 +10,7 @@
   <color name="app_red">#D54058</color>
   <color name="app_light_pink">#E997A8</color>
 
+  <color name="all_google_share">#DB4A38</color>
   <color name="all_facebook_share">#3B5998</color>
   <color name="all_fb_msngr_share">#0084FF</color>
   <color name="all_whatsapp_share">#4CAF50</color>
@@ -575,6 +576,7 @@
   <color name="color_2A2A2A">#2A2A2A</color>
   <color name="color_DB4A38">#DB4A38</color>
   <color name="color_4FD5BE">#4FD5BE</color>
+  <color name="color_888989">#888989</color>
 
   <color name="suggested_topic_bg_1">#FDF6F6</color>
   <color name="suggested_topic_bg_2">#F6FDF9</color>
